--- a/index.html
+++ b/index.html
@@ -1,40 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts Links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    
+    <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution { font-size: 11px; text-align: center; }
+      .attribution a { color: hsl(228, 45%, 44%); }
+    </style>
+  </head>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <body>
+    <header>
+      <h1 class="page__title">FAQ</h1>
+    </header>
+    <main>
+      <section class="accordion" id="accordionGroup">
+        <h2>
+          <button class="accordion__trigger" id="accordion__title_1" 
+            aria-controls="accordion__content_1" aria-expanded="false" 
+            aria-selected="false">
+            <span class="accordion__heading">
+              How many team members can I invite?
+            </span>
+            <span class="accordion__icon">
+              <img src="images/icon-arrow-down.svg" alt="">
+            </span>
+          </button>        
+        </h2>
+        <div class="accordion__content" id="accordion__content_1" role="region" 
+          aria-hidden="true" aria-labelledby="accordion__title_1">
+          <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
+        </div>
+        <h2>
+          <button class="accordion__trigger" id="accordion__title_2" 
+            aria-controls="accordion__content_2" aria-expanded="false" 
+            aria-selected="false">
+            <span class="accordion__heading">
+              What is the maximum file upload size?
+            </span>
+            <span class="accordion__icon">
+              <img src="images/icon-arrow-down.svg" alt="">
+            </span>
+          </button>        
+        </h2>
+        <div class="accordion__content" id="accordion__content_2" role="region" 
+          aria-hidden="true" aria-labelledby="accordion__title_2">
+          <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+        </div>
+        <h2>
+          <button class="accordion__trigger" id="accordion__title_3" 
+            aria-controls="accordion__content_3" aria-expanded="false" 
+            aria-selected="false">
+            <span class="accordion__heading">
+              How do I reset my password?
+            </span>
+            <span class="accordion__icon">
+              <img src="images/icon-arrow-down.svg" alt="">
+            </span>
+          </button>        
+        </h2>
+        <div class="accordion__content" id="accordion__content_3" role="region" 
+          aria-hidden="true" aria-labelledby="accordion__title_3">
+          <p>Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
+        </div>
+        <h2>
+          <button class="accordion__trigger" id="accordion__title_4" 
+            aria-controls="accordion__content_4" aria-expanded="false" 
+            aria-selected="false">
+            <span class="accordion__heading">
+              Can I cancel my subscription?
+            </span>
+            <span class="accordion__icon">
+              <img src="images/icon-arrow-down.svg" alt="">
+            </span>
+          </button>        
+        </h2>
+        <div class="accordion__content" id="accordion__content_4" role="region" 
+          aria-hidden="true" aria-labelledby="accordion__title_4">
+          <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+        </div>
+        <h2>
+          <button class="accordion__trigger" id="accordion__title_5" 
+            aria-controls="accordion__content_5" aria-expanded="false" 
+            aria-selected="false">
+            <span class="accordion__heading">
+              Do you provide additional support?
+            </span>
+            <span class="accordion__icon">
+              <img src="images/icon-arrow-down.svg" alt="">
+            </span>
+          </button>        
+        </h2>
+        <div class="accordion__content" id="accordion__content_5" role="region" 
+          aria-hidden="true" aria-labelledby="accordion__title_5">
+          <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="attribution">
+        <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/a-woodworth" target="_blank">a-woodworth</a>.</p>
+      </div>
+    </footer>
+  </body>
 </html>
