Start work on accordion headings and layout.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             aria-hidden="true" aria-labelledby="accordion__title_1" hidden>
             <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
           </div>
-          <h2>
+          <h2 class="active">
             <button 
               class="accordion__trigger"
               id="accordion__title_2"
