--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         </div>
         <section class="accordion" id="accordionGroup">
           <h1 class="page__title">FAQ</h1>
-          <h2 class="active">
+          <h2>
             <button 
               class="accordion__trigger" 
               id="accordion__title_1" 
               aria-controls="accordion__content_1" 
-              aria-expanded="true"
+              aria-expanded="false"
               tabindex="0">
               <span class="accordion__heading">How many team members can I invite?</span>
               <span class="accordion__icon">
@@ -55,15 +55,15 @@
             </button>        
           </h2>
           <div class="accordion__content" id="accordion__content_1" role="region" 
-            aria-hidden="true" aria-labelledby="accordion__title_1">
+            aria-hidden="true" aria-labelledby="accordion__title_1" hidden>
             <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
           </div>
-          <h2 class="active">
+          <h2>
             <button 
               class="accordion__trigger"
               id="accordion__title_2"
               aria-controls="accordion__content_2"
-              aria-expanded="true"
+              aria-expanded="false"
               tabindex="0">
               <span  class="accordion__heading">
                 What is the maximum file upload size?
@@ -74,15 +74,15 @@
             </button>        
           </h2>
           <div class="accordion__content" id="accordion__content_2" role="region" 
-            aria-hidden="false" aria-labelledby="accordion__title_2">
+            aria-hidden="false" aria-labelledby="accordion__title_2" hidden>
             <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
           </div>
-          <h2 class="active">
+          <h2>
             <button 
               class="accordion__trigger"
               id="accordion__title_3"
               aria-controls="accordion__content_3"
-              aria-expanded="true"
+              aria-expanded="false"
               tabindex="0">
               <span class="accordion__heading">
                 How do I reset my password?
@@ -93,15 +93,15 @@
             </button>        
           </h2>
           <div class="accordion__content" id="accordion__content_3" role="region" 
-            aria-hidden="true" aria-labelledby="accordion__title_3">
+            aria-hidden="true" aria-labelledby="accordion__title_3" hidden>
             <p>Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
           </div>
-          <h2 class="active">
+          <h2>
             <button 
               class="accordion__trigger"
               id="accordion__title_4" 
               aria-controls="accordion__content_4"
-              aria-expanded="true"
+              aria-expanded="false"
               tabindex="0">
               <span class="accordion__heading">
                 Can I cancel my subscription?
@@ -110,17 +110,17 @@
                 <img src="images/icon-arrow-down.svg" alt="" aria-hidden="true">
               </span>
             </button>        
-          </h2 class="active">
+          </h2>
           <div class="accordion__content" id="accordion__content_4" role="region" 
-            aria-hidden="true" aria-labelledby="accordion__title_4">
+            aria-hidden="true" aria-labelledby="accordion__title_4" hidden>
             <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
           </div>
-          <h2 class="active">
+          <h2>
             <button 
               class="accordion__trigger"
               id="accordion__title_5"
               aria-controls="accordion__content_5"
-              aria-expanded="true"
+              aria-expanded="false"
               tabindex="0">
               <span class="accordion__heading">
                 Do you provide additional support?
@@ -131,7 +131,7 @@
             </button>        
           </h2>
           <div class="accordion__content" id="accordion__content_5" role="region" 
-            aria-hidden="true" aria-labelledby="accordion__title_5">
+            aria-hidden="true" aria-labelledby="accordion__title_5" hidden>
             <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
           </div>
         </section>
