--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </button>        
           </h2>
           <div class="accordion__content" id="accordion__content_1" role="region" 
-            aria-hidden="true" aria-labelledby="accordion__title_1" hidden>
+            aria-labelledby="accordion__title_1" hidden>
             <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
           </div>
           <h2 class="open">
@@ -87,7 +87,7 @@
             </button>        
           </h2>
           <div class="accordion__content" id="accordion__content_3" role="region" 
-            aria-hidden="true" aria-labelledby="accordion__title_3" hidden>
+            aria-labelledby="accordion__title_3" hidden>
             <p>Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
           </div>
           <h2>
@@ -104,7 +104,7 @@
             </button>        
           </h2>
           <div class="accordion__content" id="accordion__content_4" role="region" 
-            aria-hidden="true" aria-labelledby="accordion__title_4" hidden>
+            aria-labelledby="accordion__title_4" hidden>
             <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
           </div>
           <h2>
@@ -121,7 +121,7 @@
             </button>        
           </h2>
           <div class="accordion__content" id="accordion__content_5" role="region" 
-            aria-hidden="true" aria-labelledby="accordion__title_5" hidden>
+            aria-labelledby="accordion__title_5" hidden>
             <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
           </div>
         </section>
